feat: add GISTDA API key support in environment configuration and documentation

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,8 @@
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
+
+# GISTDA Sphere Map API Key
+# Get your API key from https://sphere.gistda.or.th/
+# For testing, you can use "test2022"
+NEXT_PUBLIC_GISTDA_API_KEY="test2022"
